Cambiando foto hero

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
 
                     <div class="home__handle">
-                        <img src="assets/hero_foto.png" alt="Foto de Juan David" class="home__img">
+                        <img src="assets/myself.jpg" alt="Foto de Juan David" class="home__img " width="500px" height="100px">
                     </div>
 
                     <div class="home__social">
