arreglando imagen, y agregando gradiente

--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
                 <div class="home__container container grid">
                     
                     <div class="home__data">
-                        <h1 class="home__name">Hola 👋, soy Juan David</h1>
-                        <h3 class="home__greeting">Web Developer</h3>
-                        <p class="home__education">Estudiante de ingeniería de sistemas en su último semestre y desarrollador web, residiendo actualmente en Colombia, el desarrollo web es mi pasión 
+
+                        <span class="home__name name__gradient ">Hola, soy Juan David</span>
+                        <span class="home__greeting first-word-gradient ">Web Developer</span>
+                        <p class="home__education second-word-gradient">Estudiante de ingeniería de sistemas en su último semestre y desarrollador web, residiendo actualmente en Colombia, el desarrollo web es mi pasión 
                             y mi enfoque de carrera profesional. 
                         </p>
                         <div class="home__buttons">
                             <a download="" href="assets/pdf/cv.pdf" class="button button--ghost">
-                                Descargar mi CV  <i class="uil uil-download-alt button__icon"></i>
+                                Descarga mi Curriculum  <i class="uil uil-download-alt button__icon"></i>
                             </a>                      
                         </div>
                     </div>
